--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,7 +39,7 @@ body,
 input,
 textarea,
 button {
-  font: 400 16rem "Inter", sans-serif;
+  font-size: 400 16rem "Inter", sans-serif;
 }
 
 button {
